@@ -4,6 +4,10 @@ version 2.76
 	    least, 0.0.0.0 accesses the local host, so could
 	    be targets for DNS rebinding. See RFC 5735 section 3 
 	    for details. Thanks to Stephen Röttger for the bug report.
+
+	    Enhance --add-subnet to allow arbitrary subnet addresses.
+            Thanks to Ed Barsley for the patch.
+	
 	    
 version 2.75
             Fix reversion on 2.74 which caused 100% CPU use when a 
